feat: implement user sign in handler
