# docs/swagger.yaml
@@ -50,6 +50,34 @@ paths:
       summary: get first name
       tags:
       - User
+  /v1/user/sign/in:
+    post:
+      consumes:
+      - application/json
+      description: Auth user and return access and refresh token.
+      parameters:
+      - description: User Email
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: User Password
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+      summary: auth user and return access and refresh token
+      tags:
+      - User
   /v1/user/sign/up:
     post:
       consumes:
