# pkg/routes/public_routes.go
@@ -12,5 +12,6 @@ func PublicRoutes(a *fiber.App) {
 
 	// Routes for GET method
 	route.Get("/hello/:last_name", controllers.GetHello) // get first_name by last_name
-	route.Post("/user/sign/up", controllers.UserSignUp)  // create user
+	route.Post("/user/sign/up", controllers.UserSignUp)  // register a new user
+	route.Post("/user/sign/in", controllers.UserSignIn)  // auth, return Access & Refresh tokens
 }
